with-db/with-db-2/gw-api/http-roue-regex.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: users-parcels
  namespace: kong
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: /v2/users/\d+/parcels
          method: POST
      backendRefs:
        - name: nginx-service-2
          kind: Service
          port: 80
