with-db/with-db-2/gw-api/httprout.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: kong
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
    namespace: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /nginx-service
    backendRefs:
    - name: nginx-service
      kind: Service
      port: 80
  # - matches:
  #   - path:
  #       type: RegularExpression
  #       value: "~/users/[^/]+/parcels$"
  #     method: POST
  #   backendRefs:
  #   - name: nginx-service-2
  #     kind: Service
  #     port: 80
